# tokenizers_proto

./: Cargo.toml  README.md  build.rs  tokenizers_proto.h
.github/workflows/: release.yml
protos/: error.proto  lib.proto  pipeline_string.proto  tokenizer.proto  tokenizer_public.proto  utils.proto
protos/decoders/: bpe.proto  byte_fallback.proto  ctc.proto  decoder.proto  decoder_public.proto  fuse.proto  strip.proto  word_piece.proto
protos/models/: bpe.proto  model.proto  unigram.proto  word_level.proto  word_piece.proto
protos/normalizers/: Normalizer.proto  Utils.proto  bert.proto  byte_level.proto  normalizer.proto  normalizer_instance.proto  precompiled.proto  replace.proto  unicode.proto  utils.proto
protos/pipeline_string/: normalize.proto  pipeline_string.proto  pipeline_string_public.proto  pre_tokenize.proto
protos/pre_tokenizers/: Metaspace.proto  Utils.proto  bert.proto  byte_level.proto  metaspace.proto  pre_tokenizer.proto  pre_tokenizer_instance.proto  split_delimiter_behavior.proto  unicode_scripts.proto  utils.proto
protos/processors/: bert.proto  processor.proto  processor_public.proto  roberta.proto  template.proto
protos/tokenizer/: encoding.proto  padding.proto  tokenizer.proto  truncation.proto
protos/trainers/: added_token.proto  bpe.proto  padding_params.proto  progress.proto  trainer.proto  trainer_public.proto  truncation_params.proto  unigram.proto  word_level.proto  word_piece.proto
src/: buffer_utils.rs  general_utils.rs  lib.rs  messages.rs  normalizers.rs  pipeline_string.rs  pre_tokenizers.rs  tokenizer.rs  trainer.rs
